app/assets/stylesheets/common/base/login-signup-page.scss
/* ... */
// Signup and invite page
.invite-page,
.signup-fullpage {
  .password-confirmation {
    display: none;
  }

  .user-fields .input-group {
    .user-field {
      &.text,
      &.textarea {
        &.value-entered label.alt-placeholder.control-label,
        input:focus + label.alt-placeholder.control-label,
        textarea:focus + label.alt-placeholder.control-label {
          top: -8px;
          left: calc(1em - 0.25em);
          background-color: var(--secondary);
          padding: 0 0.25em 0 0.25em;
          font-size: 14px;
          color: var(--primary-medium);
        }

        label.alt-placeholder.control-label {
          color: var(--primary-medium);
          font-size: 16px;
          position: absolute;
          pointer-events: none;
          top: 12px;
          transition: 0.2s ease all;
          max-width: calc(100% - 2em);
          white-space: nowrap;
          display: inline-block;
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }

      details:not(.has-selection) span.name,
      details:not(.has-selection) span.formatted-selection {
        color: var(--primary-medium);
      }

      .select-kit-row span.name {
        color: var(--primary);
      }

      .select-kit.combo-box.is-expanded summary {
        outline: none;
        border: 1px solid var(--tertiary);
        box-shadow: 0 0 0 2px rgb(var(--tertiary-rgb), 0.25);
      }

      .controls .checkbox-label {
        display: flex;
        align-items: center;

        input[type="checkbox"].ember-checkbox {
          width: 1em !important;
          min-width: unset;
          margin-block: 0;
        }
      }
    }
  }
}

@include viewport.until(md) {
  .login-page,
  .signup-page,
  .invite-page {
    #main-outlet,
    #main-outlet-wrapper {
      padding: 0;
    }
  }

  .login-right-side::before {
    display: none;
  }

  .invites-show {
    .login-welcome-header {
      padding-inline: 0;
    }

    .signup-progress-bar {
      margin-inline: 0;
    }
  }

  .login-fullpage .login-body {
    .login-page-cta {
      &__buttons {
        .login-page-cta__login {
          width: 100%;
          margin-bottom: 0.5rem;
        }
      }

      &__signup {
        background: none !important;
        font-size: var(--font-up-1);
        padding: 0;
      }

      &__no-account-yet {
        font-size: var(--font-up-1);
      }
    }
  }

  .signup-fullpage .signup-body {
    .signup-page-cta {
      &__buttons {
        .signup-page-cta__signup {
          width: 100%;
          margin-bottom: 0.5rem;
        }
      }

      &__login {
        background: none !important;
        font-size: var(--font-up-1);
        padding: 0;
      }

      &__existing-account {
        font-size: var(--font-up-1);
      }
    }

    .login-welcome-header {
      padding-bottom: 0.25rem;
      padding-top: 0;
    }

    #login-form {
      padding-bottom: 0;
    }
  }
}

@include viewport.from(sm) {
  .invites-show.container {
    box-sizing: border-box;
    box-shadow: none;
    max-width: 550px;
  }
}

